# packages

net/modemmanager/: Makefile
net/mwan3/files/usr/sbin/: mwan3track
net/net-snmp/: Makefile
net/net-snmp/files/: snmpd.init
utils/acpica-unix/: Makefile
utils/collectd/: Makefile
utils/service-alarm/: Makefile
utils/service-alarm/files/etc/dbus-1/system.d/: es.aleksander.Alarm.conf
utils/service-alarm/src/: CMakeLists.txt  main.c
